[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "walkertools"
version = "0.1.0"
description = "A collection of IT utility scripts for internal use."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@company.com" }
]
dependencies = [
    # Add external libraries here later, e.g., "requests", "pandas"
]

[tool.setuptools.packages.find]
where = ["src"]