[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "walkertools"
version = "0.1.0"
description = "A Swiss Army Knife library, largely to be extra, but putatively to learn professional standards and best practices."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Walker", email = "wwilkson@gmail.com" }
]
dependencies = [
    # Add external libraries here later, e.g., "requests", "pandas"
]

[tool.setuptools.packages.find]
where = ["src"]